feat: implement a interactive slider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,10 @@
     "typeRoots": ["./node_modules/@types", "./node_modules/@yandex/ymaps3-types"],
     "paths": {
       "ymaps3": ["./node_modules/@yandex/ymaps3-types"]
-    }
+    },
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "include": ["./src/**/*.ts", "src/constants/map.ts"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
