feat: add gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.config.js --mode=production",
     "build:dev": "webpack --config webpack.config.js --mode=development",
+    "deploy": "gh-pages -d dist",
     "format": "prettier --write . --ignore-unknown",
     "lint": "eslint . --ext .ts",
     "lint:css": "stylelint --fix \"**/*.css\"",
@@ -41,6 +42,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-unicorn": "^62.0.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
